Bug 861332 - Ensure that the drawing rect used for DrawWindowOverlay doesn't depend on the window's position on the screen, so that for example the 10.6 window resizer is drawn in the correct place. r=mattwoodrow